open-orders:  fix dropdown z-index, footer z-index and mt, fix paginator

--- a/src/app/orders/open-orders/open-orders.component.scss
+++ b/src/app/orders/open-orders/open-orders.component.scss
@@ -1,29 +1,29 @@
-.table {
-    margin-top: 16px;
-    th {
-      padding: 0 8px 12px;
-      &:first-child {
-        padding-left: 16px;
-      }
-      &:last-child {
-        padding-right: 16px;
-      }
-    }
-    td {
-      padding: 8px;
-      &:first-child {
-        padding-left: 16px;
-      }
-      &:last-child {
-        padding-right: 16px;
-      }
-    }
-  }
+//.table {
+//    margin-top: 16px;
+//    th {
+//      padding: 0 8px 12px;
+//      &:first-child {
+//        padding-left: 16px;
+//      }
+//      &:last-child {
+//        padding-right: 16px;
+//      }
+//    }
+//    td {
+//      padding: 8px;
+//      &:first-child {
+//        padding-left: 16px;
+//      }
+//      &:last-child {
+//        padding-right: 16px;
+//      }
+//    }
+//  }
   
   .paginator {
-    position: absolute;
-    right: 16px;
-    bottom: 12px;
+    //position: absolute;
+    //right: 16px;
+    //bottom: 12px;
   }
   
   a.active {
